# yaspar-ir

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  copyright-check.sh
.github/workflows/: build.yaml  release.yaml
src/: ast.rs  lib.rs  locenv.rs  macros.rs  meta.rs  statics.rs  traits.rs
src/allocator/: mod.rs
src/ast/: cnf.rs  fv.rs  gsubst.rs  implicant.rs  letintro.rs  subst.rs
src/ast/ctx/: bindings.rs  checked.rs  ds.rs  dt.rs  fun.rs  init.rs  local.rs  matching.rs  mod.rs  quantifier.rs  recs.rs  utils.rs
src/raw/: alg.rs  instance.rs  letelim.rs  mod.rs  tc.rs  template.rs
src/raw/alg/: kind.rs
src/untyped/: instance.rs  mod.rs
tests/: allocator.rs  checked.rs  commands.rs  fv.rs  identifier_kinds.rs  integration.rs  let_elim.rs  substitutions.rs  typed.rs
